--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -247,15 +248,28 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version> <configuration>
+                <encoding>UTF-8</encoding>
+                <nonFilteredFileExtensions>
+                    <nonFilteredFileExtension>html</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>css</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>js</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>woff</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>eot</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>svg</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>png</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>jpg</nonFilteredFileExtension>
+                    <nonFilteredFileExtension>gif</nonFilteredFileExtension>
+                </nonFilteredFileExtensions>
+            </configuration>
+            </plugin>
         </plugins>
-
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
 
     </build>
 
