--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.profiles.active=@profileActive@
 
-
 # Application
 spring.application.name=DLL Community Platform
-server.port=8080
+server.port=8082
 
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/dll_prod?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
@@ -30,11 +29,12 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
-# Internationalization
-spring.messages.basename=messages
+# Internationalization (i18n)
+spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
-spring.web.locale=ua
-spring.web.locale-resolver=fixed
+spring.messages.fallback-to-system-locale=false
+spring.messages.cache-duration=3600
+
 
 # OAuth2 Google
 spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
@@ -48,7 +48,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 # Logging
 logging.level.root=INFO
-logging.level.com.dllcommunity.platform=DEBUG
+logging.level.platform=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
