feat: додано базову функціональність створення уроків з багатомовністю

--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,12 @@
             <version>5.6.10.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.slugify</groupId>
+            <artifactId>slugify</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+
 
     </dependencies>
 
