--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -29,9 +29,9 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 
 
-# Google OAuth ??? DEV
-spring.security.oauth2.client.registration.google.client-id=956579922328-a6222eth4dh1jv2vj47053ukib9requn.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+# Google OAuth ??? STAGE
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 
