--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ spring.log
 # Environment & Configuration
 .env
 .env.local
-application-local.properties
+application-dev.properties
 
 # Database
 *.db
