--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/dll_prod?allowPublicKeyRetrieval=true&useSSL=false&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = dll_user
-spring.datasource.password = 2G3f7d83UGEC
+spring.datasource.username = ${MYSQL_USER}
+spring.datasource.password = ${MYSQL_PASSWORD}
 
 
 ## Hibernate Properties
