--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,58 +1,77 @@
+# ============================================
+# APPLICATION BASE CONFIGURATION
+# ============================================
+
+# Application Info
+spring.application.name=DLL Community Platform
 spring.profiles.active=@profileActive@
 
-# Application
-spring.application.name=DLL Community Platform
-server.port=8082
+# ============================================
+# SERVER CONFIGURATION
+# ============================================
+server.error.path=/error
+server.error.whitelabel.enabled=false
 
-# Database
-spring.datasource.url=jdbc:mysql://localhost:3306/dll_prod?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=your_password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Session
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.name=DLLSESSIONID
 
-# JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.open-in-view=false
-
-# Flyway
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
-
-# Thymeleaf
-spring.thymeleaf.cache=false
+# ============================================
+# THYMELEAF CONFIGURATION
+# ============================================
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
 
-# Internationalization (i18n)
+# ============================================
+# INTERNATIONALIZATION (i18n)
+# ============================================
 spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=false
 spring.messages.cache-duration=3600
 
+# ============================================
+# JPA/HIBERNATE BASE SETTINGS
+# ============================================
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
-# OAuth2 Google
-spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
-spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
-spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-
-# File Upload
+# ============================================
+# FILE UPLOAD
+# ============================================
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
 
-# Logging
-logging.level.root=INFO
-logging.level.platform=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+# ============================================
+# JACKSON JSON
+# ============================================
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=UTC
+spring.jackson.default-property-inclusion=non_null
 
-# Session
-server.servlet.session.timeout=30m
-server.servlet.session.cookie.http-only=true
-server.servlet.session.cookie.secure=false
+# ============================================
+# ACTUATOR
+# ============================================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
+management.info.env.enabled=true
+
+# ============================================
+# OAUTH2 PROVIDER CONFIGURATION (not secrets!)
+# ============================================
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
