--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,35 +1,34 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/dll_prod?allowPublicKeyRetrieval=true&useSSL=false&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = ${MYSQL_USER}
-spring.datasource.password = ${MYSQL_PASSWORD}
-
+## Spring DATASOURCE
+spring.datasource.url=jdbc:mysql://mysql-server:3306/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-logging.level.org.springframework.security=TRACE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = none
-#spring.resources.static-locations = classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, file:/images
+# Server Configuration
 server.port=8082
 server.error.path=/error
 
+# Static Resources
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/home/dll_stage/
 
-spring.web.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, file:/home/, file:/C:/Users/maxim/OneDrive/Desktop, file:/D:/deutschvektor
+# Logging
+logging.level.root=INFO
+logging.level.com.dll.community=DEBUG
+logging.level.org.springframework.security=INFO
+logging.file.name=/app/logs/application.log
+logging.file.max-size=10MB
+logging.file.max-history=30
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-#logging
-logging.file.path=D:/DV/dv-site.log
-
-
-# ?????? Hibernate ??????????????? UTC ??? ?????? ? ?????? ?? ?????
+# Hibernate Timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-
-
-
-# Google OAuth ??? STAGE
+# Google OAuth 2.0
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
@@ -39,3 +38,8 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# Actuator (??? health checks)
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.health.db.enabled=true
