--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -12,6 +12,14 @@ spring.jpa.hibernate.ddl-auto=none
 server.port=8082
 server.error.path=/error
 
+# ? ??????: ???????????? ??? ?????? ?? HTTPS ??????
+server.forward-headers-strategy=native
+server.use-forward-headers=true
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
+server.tomcat.remoteip.port-header=x-forwarded-port
+server.tomcat.remoteip.host-header=x-forwarded-host
+
 # Static Resources
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/home/dll_stage/
 
@@ -32,7 +40,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+# ? ???????: ???? ???????? HTTPS URL
+spring.security.oauth2.client.registration.google.redirect-uri=https://dll.deutschvektor.com/login/oauth2/code/google
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
