feat(user cabinet + subscription) v0.2

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,3 +38,27 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+
+# ============================================
+# Payment Configuration
+# ============================================
+
+# ????? ????????? ??????? (wayforpay ??? fondy)
+payment.default-provider=wayforpay
+
+# WayForPay Configuration
+payment.wayforpay.merchant-account=merchant-account
+payment.wayforpay.merchant-domain=merchant-domain
+payment.wayforpay.secret-key=secret-key
+payment.wayforpay.api-url=https://secure.wayforpay.com/pay
+
+# Fondy Configuration
+payment.fondy.merchant-id=merchant-id
+payment.fondy.secret-key=secret-key
+payment.fondy.api-url=https://pay.fondy.eu/api/checkout/url/
+
+# Base URL ??? callback ?? return URLs
+app.base-url=${APP_BASE_URL:https://dll.deutschvektor.com}
+
+spring.messages.encoding=UTF-8
