--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -52,3 +52,28 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=when-authorized
 management.health.db.enabled=true
+
+
+# ============================================
+# Payment Configuration
+# ============================================
+
+# ????? ????????? ??????? (wayforpay ??? fondy)
+payment.default-provider=wayforpay
+
+# WayForPay Configuration
+payment.wayforpay.merchant-account=${WAYFORPAY_MERCHANT_ACCOUNT}
+payment.wayforpay.merchant-domain=${WAYFORPAY_MERCHANT_DOMAIN}
+payment.wayforpay.secret-key=${WAYFORPAY_SECRET_KEY}
+payment.wayforpay.api-url=https://secure.wayforpay.com/pay
+
+# Fondy Configuration
+payment.fondy.merchant-id=${FONDY_MERCHANT_ID}
+payment.fondy.secret-key=${FONDY_SECRET_KEY}
+payment.fondy.api-url=https://pay.fondy.eu/api/checkout/url/
+
+# Base URL ??? callback ?? return URLs
+app.base-url=${APP_BASE_URL:https://dll.deutschvektor.com}
+
+
+spring.messages.encoding=UTF-8
