fix(change Subscription)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -62,3 +62,6 @@ payment.fondy.api-url=https://pay.fondy.eu/api/checkout/url/
 app.base-url=${APP_BASE_URL:https://dll.deutschvektor.com}
 
 spring.messages.encoding=UTF-8
+
+subscription.grace-period-days=5
+subscription.reminder-days=1,3,5
