--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -41,27 +41,35 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 
 # ============================================
-# Payment Configuration
+# Payment Configuration (DEV - TEST CREDENTIALS)
 # ============================================
 
-# ????? ????????? ??????? (wayforpay ??? fondy)
+# \u041E\u0431\u0440\u0430\u043D\u0438\u0439 \u043F\u0440\u043E\u0432\u0430\u0439\u0434\u0435\u0440 \u0437\u0430 \u0437\u0430\u043C\u043E\u0432\u0447\u0443\u0432\u0430\u043D\u043D\u044F\u043C
 payment.default-provider=wayforpay
 
-# WayForPay Configuration
-payment.wayforpay.merchant-account=merchant-account
-payment.wayforpay.merchant-domain=merchant-domain
-payment.wayforpay.secret-key=secret-key
+# WayForPay TEST CREDENTIALS (\u0437 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0456\u0457)
+# https://wiki.wayforpay.com/view/852472
+payment.wayforpay.merchant-account=test_merch_n1
+payment.wayforpay.merchant-domain=www.market.ua
+payment.wayforpay.secret-key=flk3409refn54t54t*FNJRET
 payment.wayforpay.api-url=https://secure.wayforpay.com/pay
 
-# Fondy Configuration
-payment.fondy.merchant-id=merchant-id
-payment.fondy.secret-key=secret-key
+# Fondy Configuration (\u043F\u043E\u043A\u0438 \u043D\u0435 \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454\u0442\u044C\u0441\u044F)
+payment.fondy.merchant-id=not-configured
+payment.fondy.secret-key=not-configured
 payment.fondy.api-url=https://pay.fondy.eu/api/checkout/url/
 
-# Base URL ??? callback ?? return URLs
-app.base-url=${APP_BASE_URL:https://dll.deutschvektor.com}
+# Base URL \u0434\u043B\u044F callback \u0456 return URLs (DEV)
+app.base-url=http://localhost:8082
 
 spring.messages.encoding=UTF-8
 
 subscription.grace-period-days=5
 subscription.reminder-days=1,3,5
+
+
+# \u0414\u0435\u0442\u0430\u043B\u044C\u043D\u0435 \u043B\u043E\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0434\u043B\u044F payment
+logging.level.service.payment=DEBUG
+logging.level.controller.api.PaymentCallbackController=DEBUG
+logging.level.service.order=DEBUG
+logging.level.service.subscription=DEBUG
