--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -77,3 +77,12 @@ app.base-url=${APP_BASE_URL:https://dll.deutschvektor.com}
 
 
 spring.messages.encoding=UTF-8
+
+subscription.grace-period-days=5
+subscription.reminder-days=1,3,5
+
+# \u0414\u0435\u0442\u0430\u043B\u044C\u043D\u0435 \u043B\u043E\u0433\u0443\u0432\u0430\u043D\u043D\u044F \u0434\u043B\u044F payment
+logging.level.service.payment=DEBUG
+logging.level.controller.api.PaymentCallbackController=DEBUG
+logging.level.service.order=DEBUG
+logging.level.service.subscription=DEBUG
